added variable for chunkSize - for trips - for zones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,19 @@
-spring.h2.console.enabled=true
-
-spring.batch.job.enabled=false
-
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=postgres
-#spring.datasource.password=challenge
-#spring.jpa.database=postgresql
-#spring.jpa.hibernate.ddl-auto=create
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
 server.servlet.context-path=/challenge
 
-tripdata.green.location= /home/lnunes/Projects/data-loader/data/
-tripdata.yellow.location= /home/lnunes/Projects/data-loader/data/
-zones.location= /home/lnunes/Projects/data-loader/data/
+spring.batch.job.enabled=false
+spring.batch.jdbc.initialize-schema=always
 
-spring.batch.initialize-schema=ALWAYS
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=challenge
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=create
+
+data.trip.green.location= data/
+data.trip.yellow.location= data/
+data.zones.location= data/
+
+
+chunk.trip.size= 20
+chunk.zone.size= 10
